--- a/cv.html
+++ b/cv.html
@@ -121,6 +121,9 @@
               <a href="https://www.freecodecamp.org/certification/PinkHat/responsive-web-design" target="_blank" rel="noreferrer">Responsive Web Design</a>, freeCodeCamp, January 2023
             </li>
             <li>
+              <a href="https://app.aluracursos.com/emprega-one/profile/xtoledori" target="_blank" rel="noreferrer">G3 Object Oriented Java</a>, Alura & Oracle Next Education, January 2023
+            </li>
+            <li>
               <a href="https://app.aluracursos.com/emprega-one/profile/xtoledori" target="_blank" rel="noreferrer">G3 Front End</a>, Alura & Oracle Next Education, December 2022
             </li>
             <li>
@@ -255,13 +258,27 @@
 
           <h3>Data Science</h3>
           <ul>
-            <li>Participation in the Data Science Weekend by Microsoft Learn Student Ambassadors.
+            <li>
+              <a href="https://app.aluracursos.com/emprega-one/profile/xtoledori" target="_blank" rel="noreferrer">Data Visualization: Exploring with Seaborn</a>, Alura & Oracle Next Education, May 2023
             </li>
-            <li>Python for Data Science: Introduction to the Language Certification issued by <a href="https://app.aluracursos.com/emprega-one/profile/xtoledori" target="_blank" rel="noreferrer">Alura and Oracle</a></li>
-            <li>Python for Data Science: Basic Functions, Libraries and Pandas Certification issued by <a href="https://app.aluracursos.com/emprega-one/profile/xtoledori" target="_blank" rel="noreferrer">Alura and Oracle</a></li>
-            <li>Python Pandas: Data treatment and analysis Certification issued by <a href="https://app.aluracursos.com/emprega-one/profile/xtoledori" target="_blank" rel="noreferrer">Alura and Oracle</a></li>
-            <li>Machine Learning: Classification with SKLearn Certification issued by <a href="https://app.aluracursos.com/emprega-one/profile/xtoledori" target="_blank" rel="noreferrer">Alura and Oracle</a></li>
-            <li>Machine Learning: Model optimization through hyperparameters Certification issued by <a href="https://app.aluracursos.com/emprega-one/profile/xtoledori" target="_blank" rel="noreferrer">Alura and Oracle</a></li>
+            <li>
+              <a href="https://app.aluracursos.com/emprega-one/profile/xtoledori" target="_blank" rel="noreferrer">Machine Learning: Optimizing Models</a>, Alura & Oracle Next Education, May 2023
+            </li>
+            <li>
+              <a href="https://app.aluracursos.com/emprega-one/profile/xtoledori" target="_blank" rel="noreferrer">Machine Learning: Classification with SKLearn</a>, Alura & Oracle Next Education, May 2023
+            </li>
+            <li>
+              <a href="https://app.aluracursos.com/emprega-one/profile/xtoledori" target="_blank" rel="noreferrer">Python for Data Science: Introduction</a>, Alura & Oracle Next Education, May 2023
+            </li>
+            <li>
+              <a href="https://app.aluracursos.com/emprega-one/profile/xtoledori" target="_blank" rel="noreferrer">Python for Data Science: Basic functions, libraries and Pandas</a>, Alura & Oracle Next Education, May 2023
+            </li>
+            <li>
+              <a href="https://app.aluracursos.com/emprega-one/profile/xtoledori" target="_blank" rel="noreferrer">Python Pandas: Data processing and analysis</a>, Alura & Oracle Next Education, May 2023
+            </li>
+            <li>
+              <a href="https://www.linkedin.com/in/ximena-toledo-dev99/" target="_blank" rel="noreferrer">Data Science Weekend</a>, Microsoft Learn Student Ambassadors | Lambda Club MX, September 2021
+            </li>
           </ul>
 
           <h3>Quantum Computing</h3>
