--- a/cv.html
+++ b/cv.html
@@ -90,102 +90,7 @@
           <h2>Certifications</h2>
         </header>
 
-          <h3>IT Support</h3>
-          <ul>
-            <li>
-              <a href="https://coursera.org/share/dc19321bb2d78e2fd6093539bc057850" target="_blank" rel="noreferrer">Operating Systems and You: Becoming a Power User</a>, Google, September 2023
-            </li>
-            <li>
-              <a href="https://coursera.org/share/bacd3915555d3ad706e6a745763a00b5" target="_blank" rel="noreferrer">The bits and bytes of computer networks</a>, Google, July 2023
-            </li>
-            <li>
-              <a href="https://coursera.org/share/4729881f781844bc0bd6203823a4ab24" target="_blank" rel="noreferrer">Technical Support Basics</a>, Google, June 2023
-            </li>
-            <li>
-              <a href="https://capacitateparaelempleo.org/verifica/657bc949-6e80-4bda-8f1a-34f781bf3e97/ca369340-943f-4269-b38f-472f74803782" target="_blank" rel="noreferrer">Computer Technician (Office automation)</a>, Instituto Tecnológico de Teléfonos de México, February 2021
-            </li>
-            <li>
-              <a href="https://capacitateparaelempleo.org/verifica/657bc949-6e80-4bda-8f1a-34f781bf3e97/d76a815d-ccea-495a-9a71-3b5a775f4578" target="_blank" rel="noreferrer">Technician in Installation of Computer Equipment</a>, Instituto Tecnológico de Teléfonos de México, February 2021
-            </li>
-            <li>
-              <a href="https://capacitateparaelempleo.org/verifica/657bc949-6e80-4bda-8f1a-34f781bf3e97/c00a7970-0d0d-4245-abc5-9f4683845182" target="_blank" rel="noreferrer">Finder</a>, Instituto Tecnológico de Teléfonos de México, February 2021
-            </li>
-            <li>
-              <a href="https://capacitateparaelempleo.org/verifica/657bc949-6e80-4bda-8f1a-34f781bf3e97/0f75e561-0150-4b89-b099-f67f2b4ca90a" target="_blank" rel="noreferrer">Data Network Technician</a>, Instituto Tecnológico de Teléfonos de México, February 2021
-            </li>
-          </ul>
-
-          <h3>Web Development</h3>
-          <ul>  
-            <li>
-              <a href="https://www.freecodecamp.org/certification/PinkHat/responsive-web-design" target="_blank" rel="noreferrer">Responsive Web Design</a>, freeCodeCamp, January 2023
-            </li>
-            <li>
-              <a href="https://app.aluracursos.com/emprega-one/profile/xtoledori" target="_blank" rel="noreferrer">G3 Object Oriented Java</a>, Alura & Oracle Next Education, January 2023
-            </li>
-            <li>
-              <a href="https://app.aluracursos.com/emprega-one/profile/xtoledori" target="_blank" rel="noreferrer">G3 Front End</a>, Alura & Oracle Next Education, December 2022
-            </li>
-            <li>
-              <a href="https://app.aluracursos.com/emprega-one/profile/xtoledori" target="_blank" rel="noreferrer">G3 Programming Beginner</a>, Alura & Oracle Next Education, August 2022
-            </li>
-            <li>
-              <a href="https://skillshop.exceedlms.com/student/award/p9vYFZbNdtT2QnDZzPxYD3t5" target="_blank" rel="noreferrer">Web Development Fundamentals: HTML and CSS</a>, Google, June 2021
-            </li>
-          </ul>
-
-          <h3>Soft Skills</h3>
-          <ul>
-            <li>
-              <a href="https://courses.edx.org/certificates/a475a61c43f549ff96ea5fb74b8be79a" target="_blank" rel="noreferrer">Introduction to Emotional Intelligence</a>, Red de Universidades Anáhuac, September 2023
-            </li>
-            <li>
-              <a href="https://app.aluracursos.com/emprega-one/profile/xtoledori" target="_blank" rel="noreferrer">G3 Entrepreneurship</a>, Alura & Oracle Next Education, February 2023
-            </li>
-            <li>
-              <a href="https://app.aluracursos.com/emprega-one/profile/xtoledori" target="_blank" rel="noreferrer">G3 Business Agility</a>, Alura & Oracle Next Education, December 2022
-            </li>
-            <li>
-              <a href="https://app.aluracursos.com/emprega-one/profile/xtoledori" target="_blank" rel="noreferrer">G3 Personal Development</a>, Alura & Oracle Next Education, July 2022
-            </li>
-          </ul>
-
-          <h3>UX Design</h3>
-          <ul>
-            <li>
-              <a href="https://coursera.org/share/dca15b48093475c55a5a90a079a46991" target="_blank" rel="noreferrer">Responsive web designs in Adobe XD</a>, Google, March 2023
-            </li>
-            <li>
-              <a href="https://coursera.org/share/e43329f63c176a00a5150517508973bc" target="_blank" rel="noreferrer">Design a user experience for a public interest initiative and prepare for the job</a>, Google, March 2023
-            </li>
-            <li>
-              <a href="https://coursera.org/share/91b8b5122955cf0aa2ce17927d60361f" target="_blank" rel="noreferrer">Create high-fidelity prototypes and designs in Figma</a>, Google, February 2023
-            </li>
-            <li>
-              <a href="https://coursera.org/share/84ca92b9fcce740eac8746d9ffaf8feb" target="_blank" rel="noreferrer">Conduct UX Research</a>, Google, February 2023
-            </li>
-            <li>
-              <a href="https://coursera.org/share/56ee6345b0a9a1fb0451d06d203f0aa8" target="_blank" rel="noreferrer">Create low fidelity page schematics and prototypes</a>, Google, October 2022
-            </li>
-            <li>
-              <a href="https://coursera.org/share/28583b51730846c1dcf54affb7a01964" target="_blank" rel="noreferrer">First steps in the UX design process: Empathize, define and ideate</a>, Google, September 2022
-            </li>
-            <li>
-              <a href="https://coursera.org/share/bc6b4f61c9e0e7c5c2fb5b0a1951839d" target="_blank" rel="noreferrer">Basics of User Experience Design</a>, Google, August 2022
-            </li>
-          </ul>
-
-          <h3>Digital Marketing</h3>
-          <ul>
-            <li>
-              <a href="https://skillshop.exceedlms.com/student/award/tf8UuPYX9c3MXGHVcPuH3fAX" target="_blank" rel="noreferrer">Fundamentals of Digital Marketing</a>, Google, June 2021
-            </li>
-            <li>
-              <a href="https://www.linkedin.com/in/ximena-toledo-dev99/" target="_blank" rel="noreferrer">Digital Marketing & Google Ads</a>, Google & JA Americas, June 2021
-            </li>
-          </ul>
-
-          <h3>Cybersecurity and Networking</h3>
+        <h3>Cybersecurity and Networking</h3>
           <ul>
             <li>
               <a href="https://learn.microsoft.com/api/credentials/share/es-mx/XimenaToledoRivera-1087/8CC9F02990D11D98?sharingId=99F11AF59A29D8C5" target="_blank" rel="noreferrer">Security, Compliance, and Identity Fundamentals</a>, Microsoft, September 2023
@@ -220,32 +125,57 @@
             </li>
           </ul>
 
-          <h3>Cloud Computing</h3>
+          <h3>Quantum Computing</h3>
           <ul>
             <li>
-              <a href="https://www.credly.com/badges/7cb187b0-6bba-44fe-8fde-6e1dcf8a18c4/public_url" target="_blank" rel="noreferrer">Azure Fundamentals</a>, Microsoft, January 2022
+              <a href="https://www.credly.com/badges/27379115-7062-4239-a3da-21825b23287e" target="_blank" rel="noreferrer">Qubit x Qubit Quantum Winter School 2023</a>, Microsoft Azure Quantum, February 2023
             </li>
             <li>
-              <a href="https://skillshop.exceedlms.com/student/award/vDnJvzSMpiavvrFQbhFKdNvw" target="_blank" rel="noreferrer">Cloud Computing</a>, Google, May 2021
+              <a href="https://www.credly.com/badges/449019b3-ceba-41d4-96c6-797177b294e0" target="_blank" rel="noreferrer">Fundamentals of Quantum Computing</a>, The Linux Foundation, November 2022
             </li>
-          </ul>
+          </ul> 
 
-          <h3>Mobile Development</h3>
+          <h3>IT Support</h3>
           <ul>
             <li>
-              <a href="https://skillshop.exceedlms.com/student/award/ktThwyEZhDjWXGx3HFXkJRcb" target="_blank" rel="noreferrer">Mobile App Development</a>, Google, May 2021
+              <a href="https://coursera.org/share/dc19321bb2d78e2fd6093539bc057850" target="_blank" rel="noreferrer">Operating Systems and You: Becoming a Power User</a>, Google, September 2023
             </li>
-          </ul>
+            <li>
+              <a href="https://coursera.org/share/bacd3915555d3ad706e6a745763a00b5" target="_blank" rel="noreferrer">The bits and bytes of computer networks</a>, Google, July 2023
+            </li>
+            <li>
+              <a href="https://coursera.org/share/4729881f781844bc0bd6203823a4ab24" target="_blank" rel="noreferrer">Technical Support Basics</a>, Google, June 2023
+            </li>
+            <li>
+              <a href="https://capacitateparaelempleo.org/verifica/657bc949-6e80-4bda-8f1a-34f781bf3e97/ca369340-943f-4269-b38f-472f74803782" target="_blank" rel="noreferrer">Computer Technician (Office automation)</a>, Instituto Tecnológico de Teléfonos de México, February 2021
+            </li>
+            <li>
+              <a href="https://capacitateparaelempleo.org/verifica/657bc949-6e80-4bda-8f1a-34f781bf3e97/d76a815d-ccea-495a-9a71-3b5a775f4578" target="_blank" rel="noreferrer">Technician in Installation of Computer Equipment</a>, Instituto Tecnológico de Teléfonos de México, February 2021
+            </li>
+            <li>
+              <a href="https://capacitateparaelempleo.org/verifica/657bc949-6e80-4bda-8f1a-34f781bf3e97/c00a7970-0d0d-4245-abc5-9f4683845182" target="_blank" rel="noreferrer">Finder</a>, Instituto Tecnológico de Teléfonos de México, February 2021
+            </li>
+            <li>
+              <a href="https://capacitateparaelempleo.org/verifica/657bc949-6e80-4bda-8f1a-34f781bf3e97/0f75e561-0150-4b89-b099-f67f2b4ca90a" target="_blank" rel="noreferrer">Data Network Technician</a>, Instituto Tecnológico de Teléfonos de México, February 2021
+            </li>
+          </ul>    
 
-          <h3>Finance</h3>
-          <ul>
+          <h3>Web Development</h3>
+          <ul>  
             <li>
-              <a href="https://www.linkedin.com/in/ximena-toledo-dev99/" target="_blank" rel="noreferrer">Financial Education "Cuentas Contigo"
-              </a>, JA Mexico & Citibanamex, January 2022
+              <a href="https://www.freecodecamp.org/certification/PinkHat/responsive-web-design" target="_blank" rel="noreferrer">Responsive Web Design</a>, freeCodeCamp, January 2023
             </li>
             <li>
-              <a href="https://www.linkedin.com/in/ximena-toledo-dev99/" target="_blank" rel="noreferrer">Financial Education
-              </a>, HACIENDA & CONDUSEF, December 2021
+              <a href="https://app.aluracursos.com/emprega-one/profile/xtoledori" target="_blank" rel="noreferrer">G3 Object Oriented Java</a>, Alura & Oracle Next Education, January 2023
+            </li>
+            <li>
+              <a href="https://app.aluracursos.com/emprega-one/profile/xtoledori" target="_blank" rel="noreferrer">G3 Front End</a>, Alura & Oracle Next Education, December 2022
+            </li>
+            <li>
+              <a href="https://app.aluracursos.com/emprega-one/profile/xtoledori" target="_blank" rel="noreferrer">G3 Programming Beginner</a>, Alura & Oracle Next Education, August 2022
+            </li>
+            <li>
+              <a href="https://skillshop.exceedlms.com/student/award/p9vYFZbNdtT2QnDZzPxYD3t5" target="_blank" rel="noreferrer">Web Development Fundamentals: HTML and CSS</a>, Google, June 2021
             </li>
           </ul>
 
@@ -254,7 +184,7 @@
             <li>
               <a href="https://app.aluracursos.com/emprega-one/profile/xtoledori" target="_blank" rel="noreferrer">SQL with MySQL Server</a>, Alura & Oracle Next Education, December 2022
             </li>
-          </ul>
+          </ul> 
 
           <h3>Data Science</h3>
           <ul>
@@ -281,17 +211,88 @@
             </li>
           </ul>
 
-          <h3>Quantum Computing</h3>
+          <h3>Cloud Computing</h3>
           <ul>
-            <li>Fundamentals of Quantum Computing issued by <a href="https://www.credly.com/badges/449019b3-ceba-41d4-96c6-797177b294e0/public_url" target="_blank" rel="noreferrer">The Linux Foundation</a>.</li>
-            <li>Quantum Winter School with Microsoft Azure Quantum issued by Microsoft and <a href="https://www.credly.com/badges/27379115-7062-4239-a3da-21825b23287e/public_url" target="_blank" rel="noreferrer">Qubit x Qubit.</a></li>
-          </ul>            
-        </section>
+            <li>
+              <a href="https://www.credly.com/badges/7cb187b0-6bba-44fe-8fde-6e1dcf8a18c4/public_url" target="_blank" rel="noreferrer">Azure Fundamentals</a>, Microsoft, January 2022
+            </li>
+            <li>
+              <a href="https://skillshop.exceedlms.com/student/award/vDnJvzSMpiavvrFQbhFKdNvw" target="_blank" rel="noreferrer">Cloud Computing</a>, Google, May 2021
+            </li>
+          </ul>
 
-      <section class="main-section">
-        <h2>Skills Overview</h2>
-        <img src="img/T.png" loading="lazy" class="img-section"/>
-      </section>
+          <h3>Mobile Development</h3>
+          <ul>
+            <li>
+              <a href="https://skillshop.exceedlms.com/student/award/ktThwyEZhDjWXGx3HFXkJRcb" target="_blank" rel="noreferrer">Mobile App Development</a>, Google, May 2021
+            </li>
+          </ul>
+
+          <h3>UX Design</h3>
+          <ul>
+            <li>
+              <a href="https://coursera.org/share/dca15b48093475c55a5a90a079a46991" target="_blank" rel="noreferrer">Responsive web designs in Adobe XD</a>, Google, March 2023
+            </li>
+            <li>
+              <a href="https://coursera.org/share/e43329f63c176a00a5150517508973bc" target="_blank" rel="noreferrer">Design a user experience for a public interest initiative and prepare for the job</a>, Google, March 2023
+            </li>
+            <li>
+              <a href="https://coursera.org/share/91b8b5122955cf0aa2ce17927d60361f" target="_blank" rel="noreferrer">Create high-fidelity prototypes and designs in Figma</a>, Google, February 2023
+            </li>
+            <li>
+              <a href="https://coursera.org/share/84ca92b9fcce740eac8746d9ffaf8feb" target="_blank" rel="noreferrer">Conduct UX Research</a>, Google, February 2023
+            </li>
+            <li>
+              <a href="https://coursera.org/share/56ee6345b0a9a1fb0451d06d203f0aa8" target="_blank" rel="noreferrer">Create low fidelity page schematics and prototypes</a>, Google, October 2022
+            </li>
+            <li>
+              <a href="https://coursera.org/share/28583b51730846c1dcf54affb7a01964" target="_blank" rel="noreferrer">First steps in the UX design process: Empathize, define and ideate</a>, Google, September 2022
+            </li>
+            <li>
+              <a href="https://coursera.org/share/bc6b4f61c9e0e7c5c2fb5b0a1951839d" target="_blank" rel="noreferrer">Basics of User Experience Design</a>, Google, August 2022
+            </li>
+          </ul>
+
+          <h3>Soft Skills</h3>
+          <ul>
+            <li>
+              <a href="https://courses.edx.org/certificates/a475a61c43f549ff96ea5fb74b8be79a" target="_blank" rel="noreferrer">Introduction to Emotional Intelligence</a>, Red de Universidades Anáhuac, September 2023
+            </li>
+            <li>
+              <a href="https://app.aluracursos.com/emprega-one/profile/xtoledori" target="_blank" rel="noreferrer">G3 Entrepreneurship</a>, Alura & Oracle Next Education, February 2023
+            </li>
+            <li>
+              <a href="https://app.aluracursos.com/emprega-one/profile/xtoledori" target="_blank" rel="noreferrer">G3 Business Agility</a>, Alura & Oracle Next Education, December 2022
+            </li>
+            <li>
+              <a href="https://app.aluracursos.com/emprega-one/profile/xtoledori" target="_blank" rel="noreferrer">G3 Personal Development</a>, Alura & Oracle Next Education, July 2022
+            </li>
+          </ul>
+
+          <h3>Digital Marketing</h3>
+          <ul>
+            <li>
+              <a href="https://skillshop.exceedlms.com/student/award/tf8UuPYX9c3MXGHVcPuH3fAX" target="_blank" rel="noreferrer">Fundamentals of Digital Marketing</a>, Google, June 2021
+            </li>
+            <li>
+              <a href="https://www.linkedin.com/in/ximena-toledo-dev99/" target="_blank" rel="noreferrer">Digital Marketing & Google Ads</a>, Google & JA Americas, June 2021
+            </li>
+          </ul>
+
+          <h3>Finance</h3>
+          <ul>
+            <li>
+              <a href="https://www.linkedin.com/in/ximena-toledo-dev99/" target="_blank" rel="noreferrer">Financial Education "Cuentas Contigo"
+              </a>, JA Mexico & Citibanamex, January 2022
+            </li>
+            <li>
+              <a href="https://www.linkedin.com/in/ximena-toledo-dev99/" target="_blank" rel="noreferrer">Financial Education
+              </a>, HACIENDA & CONDUSEF, December 2021
+            </li>
+          </ul>    
+
+        </section>
+      <!-- End of Part 3 -->
 
       </section>
       <!-- End Part 2 -->
