--- a/cv.html
+++ b/cv.html
@@ -147,6 +147,9 @@
               <a href="https://coursera.org/share/4729881f781844bc0bd6203823a4ab24" target="_blank" rel="noreferrer">Technical Support Basics</a>, Google, June 2023
             </li>
             <li>
+              <a href="https://www.linkedin.com/in/ximena-toledo-dev99/" target="_blank" rel="noreferrer">NDG Linux Unhatched</a>, The NDG Team, September 2022
+            </li>
+            <li>
               <a href="https://capacitateparaelempleo.org/verifica/657bc949-6e80-4bda-8f1a-34f781bf3e97/ca369340-943f-4269-b38f-472f74803782" target="_blank" rel="noreferrer">Computer Technician (Office automation)</a>, Instituto Tecnológico de Teléfonos de México, February 2021
             </li>
             <li>
