--- a/cv.html
+++ b/cv.html
@@ -31,13 +31,10 @@
           <a class="nav-link" href="#Certifications">Certifications</a>
         </li>
         <li>
-          <a class="nav-link" href="#languages">Languages</a>
+          <a class="nav-link" href="#Languages">Languages</a>
         </li>
         <li>
-          <a class="nav-link" href="#softskills">Softskills</a>
-        </li>
-        <li>
-          <a class="nav-link" href="#hardskills">Hardskills</a>
+          <a class="nav-link" href="#Hardskills">Technical Skills</a>
         </li>
         <li>
           <a class="nav-link" href="#conferences">Conferences</a>
@@ -65,6 +62,9 @@
             </li>
             <li>
               Website: <a href="index.html" target="_blank" rel="noreferrer">PinkHat.com</a>
+            </li>
+            <li>
+              LinkedIn: <a href="https://www.linkedin.com/in/ximena-toledo-dev99/" target="_blank" rel="noreferrer">Ximena Toledo</a>
             </li>
           </ul>
           <p>Last updated on October 1, 2023</p>
@@ -294,118 +294,75 @@
             </li>
           </ul>    
 
-        </section>
+      </section>
       <!-- End of Part 3 -->
 
-      </section>
-      <!-- End Part 2 -->
-      <!-- Part 3 -->
-      <section class="main-section" id="languages">
+      <!-- Part 4 -->
+      <section class="main-section" id="Languages">
         <header>
           <h2>Languages</h2>
         </header>
           <ul>
-            <li>Spanish - Native Language</li>
-            <li>English - Advanced Level</li>
-            <li>German - Basic Level</li>
-          </ul>
-      </section>
-      <!-- End Part 3 -->
-      <!-- Part 4 -->
-      <section class="main-section" id="softskills">
-        <header>
-          <h2>Softskills</h2>
-        </header>
-          <ul>
-            <li>Empathy</li>
-            <li>Creativity</li>
-            <li>Critical Thinking</li>
-            <li>Problem-Solving Attitude</li>
-            <li>Innovation</li>
-            <li>Prioritizing</li>
-            <li>Planning</li>
-            <li>Active listening</li>
-            <li>Negotiating</li>
-            <li>Confidence</li>
-            <li>Adaptability</li>
-            <li>Responsibility</li>
-            <li>Teamwork</li>
-            <li>Artistic Design</li>
-            <li>Brainstorming</li>
-            <li>Ethical decision making.</li>
+            <li>Spanish, native language</li>
+            <li>English, advanced level</li>
+            <li>German, basic level</li>
           </ul>
       </section>
       <!-- End Part 4 -->
+
       <!-- Part 5 -->
-      <section class="main-section" id="hardskills">
+      <section class="main-section" id="Hardskills">
         <header>
-          <h2>Hardskills</h2>
+          <h2>Technical Skills</h2>
         </header>
 
-          <h3>Computer software knowledge</h3>
-          <ul>
-            <li>Linux OS</li>
-            <li>Windows OS</li>
-            <li>Visual Studio Code</li>
-            <li>Android Studio</li>
-            <li>Intellij IDEA</li>
-            <li>Google Colab</li>
-            <li>Jupyter Notebook</li>
-            <li>VirtualBox</li>
-            <li>Docker</li>
-            <li>Git & GitHub</li>
-            <li>Bash</li>
-            <li>VirtualBox</li>
-          </ul>
+        <h3>Software</h3>
+        <ul>
+          <li>Linux Operating System</li>
+          <li>Windows Operating System</li>
+          <li>VMware</li>
+          <li>VirtualBox</li>
+          <li>Visual Studio Code</li>
+          <li>IntelliJ IDEA</li>
+          <li>Google Colab</li>
+          <li>Jupyter Notebook</li>
+          <li>Git</li>
+          <li>GitHub</li>
+          <li>Trello</li>
+          <li>Miro</li>
+          <li>MySQL Workbench</li>
+          <li>XAMPP</li>
+          <li>Azure Portal</li>
+          <li>Figma</li>
+          <li>Adobe XD</li>
+          <li>Packet Tracer</li>
+          <li>Microsoft Office</li>
+        </ul>
 
-          <h3>Design knowledge</h3>
-          <ul>
-            <li>UX/UI Design</li>
-            <li>UX Research</li>
-            <li>Color Theory</li>
-            <li>Sketching</li>
-            <li>Data visualization</li>
-            <li>Figma</li>
-          </ul>
+        <h3>Programming and Development</h3>
+        <ul>
+          <li>HTML (HyperText Markup Language)</li>
+          <li>CSS (Cascading Style Sheets)</li>
+          <li>Sass (Syntactically Awesome Stylesheet)</li>
+          <li>PHP (Hypertext Preprocessor)</li>
+          <li>Javascript</li>
+          <li>React</li>
+          <li>Tailwind CSS</li>
+          <li>Bootstrap 5</li>
+          <li>Java</li>
+          <li>Q#</li>
+          <li>Python</li>
+          <li>SQL</li>
+        </ul>
 
-          <h3>Web Development</h3>
-          <ul>
-            <li>HTML</li>
-            <li>CSS</li>
-            <li>JavaScript</li>
-            <li>ReactJs</li>
-            <li>TailwindCSS</li>
-            <li>Sass (Syntactically Awesome Style Sheets)</li>
-            <li>Bootstrap</li>
-            <li>PHP</li>
-          </ul>
-
-          <h3>MS Office</h3>
-          <ul>
-            <li>Word</li>
-            <li>PowerPoint</li>
-            <li>OneNote</li>
-          </ul>
-
-          <h3>Programming Skills</h3>
-          <ul>
-            <li>Java</li>
-            <li>Javascript</li>
-            <li>C</li>
-            <li>C++</li>
-            <li>C#</li>
-            <li>Python</li>
-            <li>PHP</li>
-            <li>Q#</li>
-          </ul>
-
-          <h3>Database</h3>
-          <ul>
-            <li>SQL</li>
-            <li>MySQL server</li>
-          </ul>
+        <h3>Scripting</h3>
+        <ul>
+          <li>Powershell</li>
+          <li>Bash</li>
+        </ul>
       </section>
-      <!-- End Part 5 -->
+      <!-- End Part 4 -->
+
       <!-- Part 6 -->
       <section class="main-section" id="conferences">
         <header>
