--- a/cv.html
+++ b/cv.html
@@ -37,10 +37,7 @@
           <a class="nav-link" href="#Hardskills">Technical Skills</a>
         </li>
         <li>
-          <a class="nav-link" href="#conferences">Conferences</a>
-        </li>
-        <li>
-          <a class="nav-link" href="#additional-activities">Additional Activities</a>
+          <a class="nav-link" href="#Additional-Activities">Additional Activities</a>
         </li>
       </ul>
     </nav>
@@ -337,6 +334,10 @@
           <li>Adobe XD</li>
           <li>Packet Tracer</li>
           <li>Microsoft Office</li>
+          <li>Wireshark</li>
+          <li>NMAP</li>
+          <li>sqlmap</li>
+          <li>Apache HTTP Server</li>
         </ul>
 
         <h3>Programming and Development</h3>
@@ -361,31 +362,31 @@
           <li>Bash</li>
         </ul>
       </section>
-      <!-- End Part 4 -->
-
+      <!-- End of Part 5 -->
+     
       <!-- Part 6 -->
-      <section class="main-section" id="conferences">
-        <header>
-          <h2>Conferences</h2>
-        </header>
-          <h3>2022</h3>
-          <ul>
-            <li>
-              YouTube video about <a href="https://www.youtube.com/watch?v=A7T0klx7ARw&ab_channel=ADDAGROUP" target="_blank" rel="noreferrer">Quantum Computing Conference at IPN.</a>
-            </li>
-          </ul>
-      </section>
-      <!-- End Part 6 -->      
-      <!-- Part 7 -->
-      <section class="main-section" id="additional-activities">
+      <section class="main-section" id="Additional-Activities">
         <header>
           <h2>Additional Activities</h2>
         </header>
-          <h3>2022</h3>
+
+          <h3>Conferences</h3>
           <ul>
-            <li>YouTube video about <a href="https://www.youtube.com/watch?v=A7T0klx7ARw&t=128s&ab_channel=ADDAGROUP" target="_blank" rel="noreferrer">Quantum Computing and Cryptography.</a></li>
-            <li>Participation in ASUME TELMEX program.</li>
+            <li>
+              <a href="https://www.youtube.com/watch?v=mKdmdIwRyKA&ab_channel=ADDAGROUP" target="_blank" rel="noreferrer">Quantum Computing Conference</a>, Instituto Politécnico Nacional, March 2023
+            </li>
           </ul>
+
+          <h3>YouTube Videos</h3>
+          <ul>
+            <li>
+              <a href="https://www.youtube.com/watch?v=oAxK8bd5uF4&t=116s&ab_channel=XimenaToledoRivera" target="_blank" rel="noreferrer">¿YA TE ENTERASTE DE LA ERA CUÁNTICA?</a>, April 2023
+            </li>
+            <li>
+              <a href="https://www.youtube.com/watch?v=RkyLqSaHOb4&t=1s&ab_channel=XimenaToledoRivera" target="_blank" rel="noreferrer">SISTEMAS EXPERTOS | PROBABILIDADES Y TIPOS DE INCERTIDUMBRE |</a>, February 2023
+            </li>
+          </ul>
+
           <h3>Attended Events</h3>
           <ul>
             <li>Marcello Zillo (2022, August) Zero Trust. Microsoft Security Series</li>
