--- a/cv.html
+++ b/cv.html
@@ -370,6 +370,13 @@
           <h2>Additional Activities</h2>
         </header>
 
+          <h3>Publications</h3>
+          <ul>
+            <li>
+              Toledo X., Arroyo M., Avalos J., Sánchez G. (en prensa). PRINCIPIOS BÁSICOS DE LA COMPUTACIÓN Y COMPUERTAS CUÁNTICAS. Revista Electrónica Humanidades, Tecnología y Ciencia, del Instituto Politécnico Nacional.
+            </li>
+          </ul>
+
           <h3>Conferences</h3>
           <ul>
             <li>
@@ -393,7 +400,7 @@
             <li>Fernando SIlva (2022, August) Advanced threats: Microsoft Defender Suite in Action. Microsoft Security Series</li>
           </ul>
       </section>
-      <!-- End Part 7 -->
+      <!-- End of Part 6 -->
       
     </main>
   </body>
