--- a/cv.html
+++ b/cv.html
@@ -372,8 +372,12 @@
 
           <h3>Publications</h3>
           <ul>
+            <li> 
+              Toledo X., Avalos J., Sánchez G. (2023).<a href="http://revistaelectronica-ipn.org/ResourcesFiles/Contenido/29/TECNOLOGIA_29_001188.pdf" target="_blank" rel="noreferrer">COMPUTACIÓN CUÁNTICA: ANÁLISIS DE SU USO EN APLICACIONES PRÁCTICAS</a>. Revista Electrónica Humanidades, Tecnología y Ciencia, del Instituto Politécnico Nacional.
+            </li>
             <li>
-              Toledo X., Arroyo M., Avalos J., Sánchez G. (en prensa). PRINCIPIOS BÁSICOS DE LA COMPUTACIÓN Y COMPUERTAS CUÁNTICAS. Revista Electrónica Humanidades, Tecnología y Ciencia, del Instituto Politécnico Nacional.
+              Toledo X., Arroyo M., Avalos J., Sánchez G. (2023).
+              <a href="http://revistaelectronica-ipn.org/ResourcesFiles/Contenido/29/TECNOLOGIA_29_001174.pdf" target="_blank" rel="noreferrer">PRINCIPIOS BÁSICOS DE LA COMPUTACIÓN Y COMPUERTAS CUÁNTICAS</a>. Revista Electrónica Humanidades, Tecnología y Ciencia, del Instituto Politécnico Nacional.
             </li>
           </ul>
 
