--- a/cv.html
+++ b/cv.html
@@ -32,6 +32,9 @@
         </li>
         <li>
           <a class="nav-link" href="#Languages">Languages</a>
+        </li> 
+        <li>
+          <a class="nav-link" href="#Core-Competencies">Core Competencies</a>
         </li>
         <li>
           <a class="nav-link" href="#Hardskills">Technical Skills</a>
@@ -308,6 +311,19 @@
       <!-- End Part 4 -->
 
       <!-- Part 5 -->
+      <section class="main-section" id="Core-Competencies">
+        <header>
+          <h2>Core Competencies</h2>
+        </header> 
+          <ul>
+            <li>Project Planning</li>
+            <li>Leadership</li>
+            <li>Team Building</li>
+          </ul>
+      </section>
+      <!-- End Part 5 -->
+
+      <!-- Part 6 -->
       <section class="main-section" id="Hardskills">
         <header>
           <h2>Technical Skills</h2>
@@ -362,9 +378,9 @@
           <li>Bash</li>
         </ul>
       </section>
-      <!-- End of Part 5 -->
+      <!-- End of Part 6 -->
      
-      <!-- Part 6 -->
+      <!-- Part 7 -->
       <section class="main-section" id="Additional-Activities">
         <header>
           <h2>Additional Activities</h2>
@@ -404,7 +420,7 @@
             <li>Fernando SIlva (2022, August) Advanced threats: Microsoft Defender Suite in Action. Microsoft Security Series</li>
           </ul>
       </section>
-      <!-- End of Part 6 -->
+      <!-- End of Part 7 -->
       
     </main>
   </body>
