--- a/cv.html
+++ b/cv.html
@@ -316,9 +316,13 @@
           <h2>Core Competencies</h2>
         </header> 
           <ul>
-            <li>Project Planning</li>
+            <li>Applied Learning</li>
+            <li>Building a High Performing Team</li>
+            <li>Building Partnership</li>
+            <li>Continuous Learning</li>
+            <li>Delegation</li>
             <li>Leadership</li>
-            <li>Team Building</li>
+            <li>Project Planning</li>            
           </ul>
       </section>
       <!-- End Part 5 -->
