--- a/cv.html
+++ b/cv.html
@@ -137,6 +137,9 @@
           <h3>IT Support</h3>
           <ul>
             <li>
+              <a href="https://coursera.org/share/1773c13b906ec1b149d24d944a4ce315" target="_blank" rel="noreferrer">Administration of IT infrastructure systems and services</a>, Google, October 2023
+            </li>
+            <li>
               <a href="https://coursera.org/share/dc19321bb2d78e2fd6093539bc057850" target="_blank" rel="noreferrer">Operating Systems and You: Becoming a Power User</a>, Google, September 2023
             </li>
             <li>
