--- a/index.html
+++ b/index.html
@@ -186,6 +186,9 @@
           <div class="footer-col">
             <h3>Academic Profiles</h3>
             <ul>
+              <li><a class="footer-link" href="https://www.cloudskillsboost.google/public_profiles/97b5fcc5-132b-4a02-bae5-cb1f921cdd08" target="_blank" rel="noreferrer" class="btn contact-details">Cloud Skills Boost</a></li>
+            </ul>
+            <ul>
               <li><a class="footer-link" href="https://www.freecodecamp.org/PinkHat" target="_blank" rel="noreferrer" class="btn contact-details">freeCodeCamp</a></li>
             </ul>
             <ul>
