Social Media Added

--- a/index.html
+++ b/index.html
@@ -207,6 +207,9 @@
             <ul>
               <li><a class="footer-link" href="https://bento.me/pinkhat" target="_blank" rel="noreferrer" class="btn contact-details">Bento</a></li>
             </ul>
+            <ul>
+              <li><a class="footer-link" href="https://linktr.ee/pinkhat_ximena" target="_blank" rel="noreferrer" class="btn contact-details">Linktree</a></li>
+            </ul>
           </div>
           
         </div>
