--- a/cv.html
+++ b/cv.html
@@ -66,7 +66,7 @@
               LinkedIn: <a href="https://www.linkedin.com/in/ximena-toledo-dev99/" target="_blank" rel="noreferrer">Ximena Toledo</a>
             </li>
           </ul>
-          <p>Last updated on October 14, 2023</p>
+          <p>Last updated on November 1, 2023</p>
       </section> 
       <!-- End of Part 1 -->
     
@@ -136,6 +136,12 @@
 
           <h3>IT Support</h3>
           <ul>
+            <li>
+              <a href="https://coursera.org/share/86ffff7f57b2be9983a34917dd755f53" target="_blank" rel="noreferrer">Specialized Program - Google Information Technology Support</a>, Google, November 2023
+            </li>
+            <li>
+              <a href="https://coursera.org/share/dd9a616135e4d503d68643af9dc34b37" target="_blank" rel="noreferrer">Cybersecurity: Defense against the digital dark arts</a>, Google, November 2023
+            </li>
             <li>
               <a href="https://coursera.org/share/1773c13b906ec1b149d24d944a4ce315" target="_blank" rel="noreferrer">Administration of IT infrastructure systems and services</a>, Google, October 2023
             </li>
@@ -235,6 +241,9 @@
 
           <h3>UX Design</h3>
           <ul>
+            <li>
+              <a href="https://coursera.org/share/2e2d93175d9b908e3552e7f2ce2b6888" target="_blank" rel="noreferrer">Specialized Program - Google User Experience (UX) Design</a>, Google, March 2023
+            </li>
             <li>
               <a href="https://coursera.org/share/dca15b48093475c55a5a90a079a46991" target="_blank" rel="noreferrer">Responsive web designs in Adobe XD</a>, Google, March 2023
             </li>
