--- a/cv.html
+++ b/cv.html
@@ -225,6 +225,9 @@
           <h3>Cloud Computing</h3>
           <ul>
             <li>
+              <a href="https://www.linkedin.com/in/ximena-toledo-dev99/" target="_blank" rel="noreferrer">AWS Cloud Practitioner</a>, CompuEducación and AWS, October 2023
+            </li>
+            <li>
               <a href="https://www.credly.com/badges/7cb187b0-6bba-44fe-8fde-6e1dcf8a18c4/public_url" target="_blank" rel="noreferrer">Azure Fundamentals</a>, Microsoft, January 2022
             </li>
             <li>
