--- a/cv.html
+++ b/cv.html
@@ -172,7 +172,10 @@
           </ul>    
 
           <h3>Web Development</h3>
-          <ul>  
+          <ul>
+            <li>
+              <a href="https://www.linkedin.com/in/ximena-toledo-dev99/" target="_blank" rel="noreferrer">Java For Beginners</a>, Amigoscode, October 2023
+            </li>  
             <li>
               <a href="https://www.freecodecamp.org/certification/PinkHat/responsive-web-design" target="_blank" rel="noreferrer">Responsive Web Design</a>, freeCodeCamp, January 2023
             </li>
