--- a/cv.html
+++ b/cv.html
@@ -92,7 +92,7 @@
         <h3>Cybersecurity and Networking</h3>
           <ul>
             <li>
-              <a href="https://credsverse.com/credentials/4febdf32-8982-4a6b-8cc2-fbaac86289dd" target="_blank" rel="noreferrer">Cómo ser un Líder en un Mundo Cibernétioco Workshop</a>, Hacker Mentor, November 2023
+              <a href="https://credsverse.com/credentials/4febdf32-8982-4a6b-8cc2-fbaac86289dd" target="_blank" rel="noreferrer">Cómo ser un Líder en un Mundo Cibernético Workshop</a>, Hacker Mentor, November 2023
             </li>
             <li>
               <a href="https://learn.microsoft.com/api/credentials/share/es-mx/XimenaToledoRivera-1087/8CC9F02990D11D98?sharingId=99F11AF59A29D8C5" target="_blank" rel="noreferrer">Security, Compliance, and Identity Fundamentals</a>, Microsoft, September 2023
