--- a/cv.html
+++ b/cv.html
@@ -231,6 +231,15 @@
           <h3>Cloud Computing</h3>
           <ul>
             <li>
+              <a href="https://www.cloudskillsboost.google/public_profiles/97b5fcc5-132b-4a02-bae5-cb1f921cdd08" target="_blank" rel="noreferrer">Google Cloud Computing Foundations: Networking & Security in Google Cloud</a>, Google Cloud, October 2023
+            </li>
+            <li>
+              <a href="https://www.cloudskillsboost.google/public_profiles/97b5fcc5-132b-4a02-bae5-cb1f921cdd08" target="_blank" rel="noreferrer">Google Cloud Computing Foundations: Data, ML, and AI in Google Cloud</a>, Google Cloud, October 2023
+            </li>
+            <li>
+              <a href="https://www.cloudskillsboost.google/public_profiles/97b5fcc5-132b-4a02-bae5-cb1f921cdd08" target="_blank" rel="noreferrer">Google Cloud Essentials</a>, Google Cloud, October 2023
+            </li>
+            <li>
               <a href="https://www.linkedin.com/in/ximena-toledo-dev99/" target="_blank" rel="noreferrer">AWS Cloud Practitioner</a>, CompuEducación and AWS, October 2023
             </li>
             <li>
