--- a/cv.html
+++ b/cv.html
@@ -370,6 +370,7 @@
 
         <h3>Software</h3>
         <ul>
+          <li>Notable</li>
           <li>OpenShot Video Editor</li>
           <li>Linux Operating System</li>
           <li>Windows Operating System</li>
