--- a/cv.html
+++ b/cv.html
@@ -370,6 +370,8 @@
 
         <h3>Software</h3>
         <ul>
+          <li>Webex</li>
+          <li>Jitsi</li>
           <li>Notable</li>
           <li>OpenShot Video Editor</li>
           <li>Linux Operating System</li>
