--- a/cv.html
+++ b/cv.html
@@ -180,6 +180,9 @@
           <h3>Web Development</h3>
           <ul>
             <li>
+              <a href="https://www.coursera.org/account/accomplishments/certificate/GR3FBXNZENEU" target="_blank" rel="noreferrer">CComputational Thinking with Javascript 1: Draw & Animate</a>, University of Glasgow, November 2023
+            </li>
+            <li>
               <a href="https://www.linkedin.com/in/ximena-toledo-dev99/" target="_blank" rel="noreferrer">Java For Beginners</a>, Amigoscode, October 2023
             </li>  
             <li>
