--- a/cv.html
+++ b/cv.html
@@ -316,6 +316,9 @@
           <h3>Digital Marketing</h3>
           <ul>
             <li>
+              <a href="https://www.linkedin.com/in/ximena-toledo-dev99/" target="_blank" rel="noreferrer">Marketing Digital 1: Lo esencial</a>, Google, November 2023
+            </li>
+            <li>
               <a href="https://skillshop.exceedlms.com/student/award/tf8UuPYX9c3MXGHVcPuH3fAX" target="_blank" rel="noreferrer">Fundamentals of Digital Marketing</a>, Google, June 2021
             </li>
             <li>
