--- a/cv.html
+++ b/cv.html
@@ -95,6 +95,9 @@
               <a href="https://www.credly.com/badges/290f3b64-b428-4918-9f40-118b0d3aafbb/public_url" target="_blank" rel="noreferrer">CCNA: Introduction to Networks</a>, Cisco, November 2023
             </li>
             <li>
+              <a href="https://www.linkedin.com/in/ximena-toledo-dev99/" target="_blank" rel="noreferrer">Security Awareness 2023</a>, Softtek, November 2023
+            </li>
+            <li>
               <a href="https://credsverse.com/credentials/4febdf32-8982-4a6b-8cc2-fbaac86289dd" target="_blank" rel="noreferrer">Cómo ser un Líder en un Mundo Cibernético Workshop</a>, Hacker Mentor, November 2023
             </li>
             <li>
