--- a/cv.html
+++ b/cv.html
@@ -99,6 +99,9 @@
         <h3>Cybersecurity and Networking</h3>
           <ul>
             <li>
+              <a href="https://credsverse.com/credentials/39111f63-6c52-4727-b9a4-1a7131f88584" target="_blank" rel="noreferrer">Workshop ISO 27001</a>, Hacker Mentor, November 2023
+            </li>
+            <li>
               <a href="https://www.credly.com/badges/290f3b64-b428-4918-9f40-118b0d3aafbb/public_url" target="_blank" rel="noreferrer">CCNA: Introduction to Networks</a>, Cisco, November 2023
             </li>
             <li>
