--- a/cv.html
+++ b/cv.html
@@ -92,7 +92,7 @@
         <h3>DevOps</h3>
           <ul>
             <li>
-              <a href="https://www.credly.com/badges/27379115-7062-4239-a3da-21825b23287e" target="_blank" rel="noreferrer">Introduction to Operations</a>, Softtek University, November 2023
+              <a href="https://www.linkedin.com/in/ximena-toledo-dev99/" target="_blank" rel="noreferrer">Introduction to Operations</a>, Softtek University, November 2023
             </li>
           </ul> 
 
@@ -193,7 +193,7 @@
           <h3>Web Development</h3>
           <ul>
             <li>
-              <a href="https://www.coursera.org/account/accomplishments/certificate/GR3FBXNZENEU" target="_blank" rel="noreferrer">CComputational Thinking with Javascript 1: Draw & Animate</a>, University of Glasgow, November 2023
+              <a href="https://www.coursera.org/account/accomplishments/certificate/GR3FBXNZENEU" target="_blank" rel="noreferrer">Computational Thinking with Javascript 1: Draw & Animate</a>, University of Glasgow, November 2023
             </li>
             <li>
               <a href="https://www.linkedin.com/in/ximena-toledo-dev99/" target="_blank" rel="noreferrer">Java For Beginners</a>, Amigoscode, October 2023
