About me section updated

--- a/index.html
+++ b/index.html
@@ -46,7 +46,12 @@
         <div class="about-container">
           <div class="items-container">
             <h2>About me</h2>
-            <p>I am Ximena Toledo, PinkHat's owner, a computer engineer. Throughout my academic journey, I have gained experience in the field of technology as an Installation and Repair Technician for Computer Equipment, as well as data network design and IT solutions. My quest for knowledge has led me to obtain a series of certifications, including Web Development, Mobile Development, UX Design, Digital Marketing, Cybersecurity and Networks, IT Support, Finance, Cloud Computing, Databases, Data Science, and even Quantum Computing. I am committed to continuous learning and applying my skills to interesting projects.</p>
+            <p>
+              Dedicated and passionate Computer Engineer and UX Designer at the helm of PinkHat, a hub of technological innovation. My academic journey has been an immersive exploration into the world of technology, fostering a diverse skill set and multifaceted expertise.
+            </p>
+            <p>
+              Driven by an insatiable thirst for knowledge, I've pursued a spectrum of certifications across a wide range of domains, encompassing Web Development, Mobile Development, UX Design, Digital Marketing, Cybersecurity, Networks, IT Support, Finance, Cloud Computing, Databases, Data Science, and even delving into the complexities of Quantum Computing. 
+            </p>
             <a href="cv.html" target="_blank" rel="noreferrer" class="btn-1 about-btn">Show CV</a>
           </div>
         </div>
