--- a/cv.html
+++ b/cv.html
@@ -421,6 +421,16 @@
           <li>Apache HTTP Server</li>
         </ul>
 
+        <h3>Social Media Security Configuration</h3>
+        <ul>
+          <li>WhatsApp</li>
+          <li>Telegram</li>
+          <li>Facebook</li>
+          <li>LinkedIn</li>
+          <li>Instagram</li>
+          <li>Signal</li>
+        </ul>
+
         <h3>Programming and Development</h3>
         <ul>
           <li>HTML (HyperText Markup Language)</li>
