Home site updated

--- a/index.html
+++ b/index.html
@@ -200,6 +200,9 @@
               <li><a class="footer-link" href="https://learn.microsoft.com/es-mx/users/ximenatoledo-99/" target="_blank" rel="noreferrer" class="btn contact-details">Microsoft Learn</a></li>
             </ul>
             <ul>
+              <li><a class="footer-link" href="https://skillshop.exceedlms.com/profiles/c5f8a5c2c310465b963a558be04f03ca" target="_blank" rel="noreferrer" class="btn contact-details">Skillshop</a></li>
+            </ul>
+            <ul>
               <li><a class="footer-link" href="https://www.coursera.org/user/b785740e454f44a3ef93698e789e15bf" target="_blank" rel="noreferrer" class="btn contact-details">Coursera</a></li>
             </ul>
             <ul>
