--- a/cv.html
+++ b/cv.html
@@ -66,7 +66,7 @@
               LinkedIn: <a href="https://www.linkedin.com/in/ximena-toledo-dev99/" target="_blank" rel="noreferrer">Ximena Toledo</a>
             </li>
           </ul>
-          <p>Last updated on November 7, 2023</p>
+          <p>Last updated on December 13, 2023</p>
       </section> 
       <!-- End of Part 1 -->
     
@@ -76,7 +76,7 @@
           <h2>Education</h2>
         </header>
           <ul>
-            <li><strong>Instituto Politécnico Nacional</strong>, Mexico, CDMX <br> Computer Engineering</li>
+            <li><strong>Instituto Politécnico Nacional</strong>, Mexico, CDMX <br> Computer Engineer</li>
             <li><strong>Instituto Politécnico Nacional</strong>, Mexico, CDMX <br>Beca de Estímulo Institucional de Formación de Investigadores<br>Junior Researcher</li>
           </ul>
       </section>
@@ -99,7 +99,10 @@
         <h3>Cybersecurity and Networking</h3>
           <ul>
             <li>
-              <a href="https://www.linkedin.com/in/ximena-toledo-dev99/" target="_blank" rel="noreferrer">Curso de ciberseguridad para microempresas y autónomos</a>, incibe y Gobierno de España, December 2023
+              <a href="https://www.linkedin.com/in/ximena-toledo-dev99/" target="_blank" rel="noreferrer">Protege tu Negocio: Ciberseguridad en el Teletrabajo</a>, incibe and Google, December 2023
+            </li>
+            <li>
+              <a href="https://www.linkedin.com/in/ximena-toledo-dev99/" target="_blank" rel="noreferrer">Curso de ciberseguridad para microempresas y autónomos</a>, incibe and Gobierno de España, December 2023
             </li>
             <li>
               <a href="https://credsverse.com/credentials/39111f63-6c52-4727-b9a4-1a7131f88584" target="_blank" rel="noreferrer">Workshop ISO 27001</a>, Hacker Mentor, November 2023
