--- a/cv.html
+++ b/cv.html
@@ -76,7 +76,7 @@
           <h2>Education</h2>
         </header>
           <ul>
-            <li><strong>Instituto Politécnico Nacional</strong>, Mexico, CDMX <br> Computer Engineer</li>
+            <li><strong>Instituto Politécnico Nacional</strong>, Mexico, CDMX <br> Bachelor of Computer Engineering with Honours</li>
             <li><strong>Instituto Politécnico Nacional</strong>, Mexico, CDMX <br>Beca de Estímulo Institucional de Formación de Investigadores<br>Junior Researcher</li>
           </ul>
       </section>
