--- a/cv.html
+++ b/cv.html
@@ -99,7 +99,7 @@
         <h3>Cybersecurity and Networking</h3>
           <ul>
             <li>
-              <a href="https://www.linkedin.com/in/ximena-toledo-dev99/" target="_blank" rel="noreferrer">Protege tu Negocio: Ciberseguridad en el Teletrabajo</a>, incibe and Google, December 2023
+              <a href="https://skillshop.exceedlms.com/student/award/aPCkHnGMiDt8QMdVi69CPgLc" target="_blank" rel="noreferrer">Protege tu Negocio: Ciberseguridad en el Teletrabajo</a>, incibe and Google, December 2023
             </li>
             <li>
               <a href="https://www.linkedin.com/in/ximena-toledo-dev99/" target="_blank" rel="noreferrer">Curso de ciberseguridad para microempresas y autónomos</a>, incibe and Gobierno de España, December 2023
