--- a/cv.html
+++ b/cv.html
@@ -76,7 +76,7 @@
           <h2>Education</h2>
         </header>
           <ul>
-            <li><strong>Instituto Politécnico Nacional</strong>, Mexico, CDMX <br> Bachelor of Computer Engineering with Honours</li>
+            <li><strong> <a href="https://www.ipn.mx/oferta-educativa/educacion-superior/ver-carrera.html?lg=en&id=6&nombre=Computer-Engineering" target="_blank" rel="noreferrer">Instituto Politécnico Nacional</a></strong>, Mexico, CDMX <br>Computer Engineering, Graduated with Honours</li>
             <li><strong>Instituto Politécnico Nacional</strong>, Mexico, CDMX <br>Beca de Estímulo Institucional de Formación de Investigadores<br>Junior Researcher</li>
           </ul>
       </section>
@@ -425,6 +425,7 @@
           <li>NMAP</li>
           <li>sqlmap</li>
           <li>Apache HTTP Server</li>
+          <li>Google Jamboard</li>
         </ul>
 
         <h3>Social Media Security Configuration</h3>
