--- a/cv.html
+++ b/cv.html
@@ -99,6 +99,12 @@
         <h3>Cybersecurity and Networking</h3>
           <ul>
             <li>
+              <a href="https://coursera.org/share/d558d8011b9881b0dc39e8226b971db4" target="_blank" rel="noreferrer">Manage Security Risks</a>, Google, December 2023
+            </li>
+            <li>
+              <a href="https://coursera.org/share/972ba9f1a130c669e66db5521e315d6c" target="_blank" rel="noreferrer">Cybersecurity Fundamentals</a>, Google, December 2023
+            </li>
+            <li>
               <a href="https://skillshop.exceedlms.com/student/award/aPCkHnGMiDt8QMdVi69CPgLc" target="_blank" rel="noreferrer">Protege tu Negocio: Ciberseguridad en el Teletrabajo</a>, incibe and Google, December 2023
             </li>
             <li>
