--- a/cv.html
+++ b/cv.html
@@ -66,7 +66,7 @@
               LinkedIn: <a href="https://www.linkedin.com/in/ximena-toledo-dev99/" target="_blank" rel="noreferrer">Ximena Toledo</a>
             </li>
           </ul>
-          <p>Last updated on December 13, 2023</p>
+          <p>Last updated on December 29, 2023</p>
       </section> 
       <!-- End of Part 1 -->
     
@@ -98,6 +98,9 @@
 
         <h3>Cybersecurity and Networking</h3>
           <ul>
+            <li>
+              <a href="https://www.linkedin.com/in/ximena-toledo-dev99/" target="_blank" rel="noreferrer">SQL Injection Attacks</a>, EC-Council, December 2023
+            </li>
             <li>
               <a href="https://coursera.org/share/d558d8011b9881b0dc39e8226b971db4" target="_blank" rel="noreferrer">Manage Security Risks</a>, Google, December 2023
             </li>
