--- a/cv.html
+++ b/cv.html
@@ -425,14 +425,12 @@
           <li>Miro</li>
           <li>MySQL Workbench</li>
           <li>XAMPP</li>
-          <li>Azure Portal</li>
+          <li>Microsoft Azure</li>
+          <li>Microsoft Office 365</li>
+          <li>Google Cloud Platform</li>
           <li>Figma</li>
           <li>Adobe XD</li>
-          <li>Packet Tracer</li>
-          <li>Microsoft Office</li>
-          <li>Wireshark</li>
-          <li>NMAP</li>
-          <li>sqlmap</li>
+          <li>Packet Tracer</li>          
           <li>Apache HTTP Server</li>
           <li>Google Jamboard</li>
         </ul>
@@ -461,6 +459,14 @@
           <li>Q#</li>
           <li>Python</li>
           <li>SQL</li>
+        </ul>
+
+        <h3>Ethical Hacking Tools</h3>
+        <ul>
+          <li>NMAP</li>
+          <li>Wireshark</li>
+          <li>sqlmap</li>
+          <li>jSQL Injection</li>
         </ul>
 
         <h3>Scripting</h3>
