--- a/cv.html
+++ b/cv.html
@@ -433,6 +433,7 @@
           <li>Packet Tracer</li>          
           <li>Apache HTTP Server</li>
           <li>Google Jamboard</li>
+          <li>LibreOffice</li>
         </ul>
 
         <h3>Social Media Security Configuration</h3>
@@ -466,6 +467,7 @@
           <li>NMAP</li>
           <li>Wireshark</li>
           <li>sqlmap</li>
+          <li>jSQL Injection</li>
           <li>jSQL Injection</li>
         </ul>
 
