--- a/cv.html
+++ b/cv.html
@@ -409,6 +409,7 @@
         <ul>
           <li>Webex</li>
           <li>Jitsi</li>
+          <li>Microsoft Teams</li>
           <li>Notable</li>
           <li>OpenShot Video Editor</li>
           <li>Linux Operating System</li>
