--- a/cv.html
+++ b/cv.html
@@ -469,7 +469,8 @@
           <li>Wireshark</li>
           <li>sqlmap</li>
           <li>jSQL Injection</li>
-          <li>jSQL Injection</li>
+          <li>Tor Browser</li>
+          <li>ProxyChains</li>
         </ul>
 
         <h3>Scripting</h3>
