--- a/cv.html
+++ b/cv.html
@@ -99,6 +99,9 @@
         <h3>Cybersecurity and Networking</h3>
           <ul>
             <li>
+              <a href="https://www.linkedin.com/in/ximena-toledo-dev99/" target="_blank" rel="noreferrer">Introduction to Dark Web, Anonymity, and Cryptocurrency</a>, EC-Council, January 2024
+            </li>
+            <li>
               <a href="https://www.linkedin.com/in/ximena-toledo-dev99/" target="_blank" rel="noreferrer">SQL Injection Attacks</a>, EC-Council, December 2023
             </li>
             <li>
