--- a/cv.html
+++ b/cv.html
@@ -523,9 +523,13 @@
             <li>Marcello Zillo (2022, August) Zero Trust. Microsoft Security Series</li>
             <li>Fernando SIlva (2022, August) Advanced threats: Microsoft Defender Suite in Action. Microsoft Security Series</li>
           </ul>
+
+          <h3>Challenges</h3>
+          <ul>
+            <li><a href="https://learn.microsoft.com/es-mx/users/ximenatoledo-99/" target="_blank" rel="noreferrer">Microsoft Ignite: Security with Azure DevOps (2024, January)</a></li>
+          </ul>
       </section>
       <!-- End of Part 7 -->
-      
     </main>
   </body>
 </html>
