--- a/cv.html
+++ b/cv.html
@@ -527,6 +527,8 @@
           <h3>Challenges</h3>
           <ul>
             <li><a href="https://learn.microsoft.com/es-mx/users/ximenatoledo-99/" target="_blank" rel="noreferrer">Microsoft Ignite: Security with Azure DevOps (2024, January)</a></li>
+            <li><a href="https://learn.microsoft.com/es-mx/users/ximenatoledo-99/" target="_blank" rel="noreferrer">GitHub Universe Cloud Skills Challenge          (2023, December)</a></li>
+            <li><a href="https://learn.microsoft.com/es-mx/users/ximenatoledo-99/" target="_blank" rel="noreferrer">Colombia Cloud Skills Challenge Azure Data Fundamentals (2023, November)</a></li>
           </ul>
       </section>
       <!-- End of Part 7 -->
