--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <!-- fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Pixelify+Sans&display=swap" rel="stylesheet"> 
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,900&display=swap" rel="stylesheet">
     <!-- Icons -->
     <script src="https://kit.fontawesome.com/9c48faf641.js" crossorigin="anonymous"></script>
@@ -186,7 +188,7 @@
       <div class="container">
         <div class="row">
           <div class="footer-col footer-logo">
-            <p>&copy Created by <a href="index.html" class="cr-footer">Pink<strong>Hat</strong></a></p>
+            <p>&copy Created by <a href="index.html" class="cr-footer">Pink<a>Hat</a></a></p>
           </div>
           <div class="footer-col">
             <h3>Academic Profiles</h3>
