--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
       <div class="container">
         <div class="row">
           <div class="footer-col footer-logo">
-            <p>&copy Created by <a href="index.html" class="cr-footer">Pink<a>Hat</a></a></p>
+            <p>&copy Created by <a href="index.html" class="cr-footer">Pink<a class="cr-footer-c">Hat</a></a></p>
           </div>
           <div class="footer-col">
             <h3>Academic Profiles</h3>
