--- a/cv.html
+++ b/cv.html
@@ -92,6 +92,9 @@
         <h3>DevOps</h3>
           <ul>
             <li>
+              <li>
+                <a href="https://www.linkedin.com/in/ximena-toledo-dev99/" target="_blank" rel="noreferrer">AMS</a>, Softtek University, January 2024
+              </li>
               <a href="https://www.linkedin.com/in/ximena-toledo-dev99/" target="_blank" rel="noreferrer">Introduction to Operations</a>, Softtek University, November 2023
             </li>
           </ul> 
@@ -529,6 +532,7 @@
             <li><a href="https://learn.microsoft.com/es-mx/users/ximenatoledo-99/" target="_blank" rel="noreferrer">Microsoft Ignite: Security with Azure DevOps (2024, January)</a></li>
             <li><a href="https://learn.microsoft.com/es-mx/users/ximenatoledo-99/" target="_blank" rel="noreferrer">GitHub Universe Cloud Skills Challenge          (2023, December)</a></li>
             <li><a href="https://learn.microsoft.com/es-mx/users/ximenatoledo-99/" target="_blank" rel="noreferrer">Colombia Cloud Skills Challenge Azure Data Fundamentals (2023, November)</a></li>
+            <li><a href="https://learn.microsoft.com/es-mx/users/ximenatoledo-99/" target="_blank" rel="noreferrer">Microsoft Ignite: Security with Azure DevOps (2024, January)</a></li>
             <li><a href="https://learn.microsoft.com/es-mx/users/ximenatoledo-99/" target="_blank" rel="noreferrer">Microsoft Ignite: Security with Azure DevOps (2024, January)</a></li>
           </ul>
       </section>
