--- a/cv.html
+++ b/cv.html
@@ -93,10 +93,14 @@
           <ul>
             <li>
               <li>
-                <a href="https://www.linkedin.com/in/ximena-toledo-dev99/" target="_blank" rel="noreferrer">AMS</a>, Softtek University, January 2024
+                <a href="https://www.linkedin.com/in/ximena-toledo-dev99/" target="_blank" rel="noreferrer">Frameworks for AMS</a>, Softtek University, January 2024
               </li>
+              <li>
+                <a href="https://www.linkedin.com/in/ximena-toledo-dev99/" target="_blank" rel="noreferrer">AMS Modelo 1</a>, Softtek University, January 2024
+              </li>
+              <li>
               <a href="https://www.linkedin.com/in/ximena-toledo-dev99/" target="_blank" rel="noreferrer">Introduction to Operations</a>, Softtek University, November 2023
-            </li>
+              </li>
           </ul> 
 
         <h3>Cybersecurity and Networking</h3>
